# abhishek12

./: COMPLETE_PACKAGE.md  README.md  publish.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml  publish-workflow.yml  publish.yml
src/mayini/: __init__.py
src/mayini/nn/: __init__.py  activations.py  losses.py  rnn.py
src/mayini/optim/: __init__.py
src/mayini/training/: __init__.py
