[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mayini-framework"          # The name on PyPI
version = "0.1.0"                  # Update this for each release
description = "A deep learning framework built from scratch"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Abhishek Adari", email = "abhishekadari85@gmail.com" }
]
keywords = ["deep-learning", "neural-networks", "machine-learning", "framework"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.urls]
Homepage = "https://github.com/907-bot-collab/mayini"
Repository = "https://github.com/907-bot-collab/mayini"
Issues = "https://github.com/907-bot-collab/mayini/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
