[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mayini-framework"
version = "0.2.0"
description = "A comprehensive deep learning framework built from scratch in Python"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Abhishek Adari", email = "abhishekadari85@gmail.com"}
]
maintainers = [
    {name = "Abhishek Adari", email = "abhishekadari85@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["deep-learning", "machine-learning", "neural-networks", "pytorch-like", "educational", "ai", "tensor"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/907-bot-collab/mayini"
Documentation = "https://github.com/907-bot-collab/mayini"
Repository = "https://github.com/907-bot-collab/mayini"
"Bug Tracker" = "https://github.com/907-bot-collab/mayini/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.800",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.0",
    "pre-commit>=2.15.0",
    "twine>=3.4.0",
    "build>=0.7.0",
]
test = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
]

# Package discovery - CRITICAL for src/ layout
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mayini*"]
exclude = ["tests*"]

# Development tools configuration
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.coverage.run]
source = ["src/mayini"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
